--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@handsontable/react": "^15.2.0",
         "@hookform/resolvers": "^3.9.1",
+        "@mui/material": "^7.0.1",
+        "@mui/x-data-grid": "^7.28.3",
         "@radix-ui/react-accordion": "^1.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.4",
         "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -37,12 +42,16 @@
         "@radix-ui/react-toggle": "^1.1.1",
         "@radix-ui/react-toggle-group": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
+        "@tanstack/react-table": "^8.21.2",
+        "ag-grid-community": "^33.2.1",
+        "ag-grid-react": "^33.2.1",
         "autoprefixer": "^10.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.4",
         "date-fns": "4.1.0",
         "embla-carousel-react": "8.5.1",
+        "handsontable": "^15.2.0",
         "input-otp": "1.4.1",
         "lucide-react": "^0.454.0",
         "next": "^15.2.4",
@@ -52,6 +61,7 @@
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.54.1",
         "react-resizable-panels": "^2.1.7",
+        "react-table": "^7.8.0",
         "recharts": "2.15.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
@@ -63,6 +73,7 @@
         "@types/node": "^22",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-table": "^7.7.20",
         "postcss": "^8",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
