--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
         "handsontable": "^15.2.0",
         "input-otp": "1.4.1",
         "lucide-react": "^0.454.0",
+        "mssql": "^11.0.1",
+        "mysql2": "^3.14.0",
         "next": "^15.2.4",
         "next-themes": "^0.4.4",
         "react": "^19.1.0",
