--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "zod": "^3.24.1"
     },
     "devDependencies": {
+        "@types/mssql": "^9.1.7",
         "@types/node": "^22",
         "@types/react": "^19",
         "@types/react-dom": "^19",
