--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-day-picker": "8.10.1",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.54.1",
+        "react-pdf": "^9.2.1",
         "react-resizable-panels": "^2.1.7",
         "react-table": "^7.8.0",
         "recharts": "2.15.0",
